--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     <div id="wrapper">
         <div id="login" class="animate form">
             <p>Login or Register</p>
-           <p><a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>
+           <p><a href="login.html" class="btn btn-default"><span class="fa fa-user"></span>
            OK</a></p>
         </div>
     </div>
