--- a/public/bord.html
+++ b/public/bord.html
@@ -57,20 +57,252 @@
 
     <div class="main_container">
 
-        <% include nav %>
+        <div class="col-md-3 left_col">
+            <div class="left_col scroll-view">
+
+                <div class="navbar nav_title" style="border: 0;">
+                    <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentellela Alela!</span></a>
+                </div>
+                <div class="clearfix"></div>
+
+                <!-- menu prile quick info -->
+                <div class="profile">
+                    <div class="profile_pic">
+                        <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                    </div>
+                    <div class="profile_info">
+                        <span>Welcome,</span>
+                        <h2> User/h2>
+                    </div>
+                </div>
+                <!-- /menu prile quick info -->
+
+                <br />
+
+                <!-- sidebar menu -->
+                <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+
+                    <div class="menu_section">
+                        <h3>General</h3>
+                        <ul class="nav side-menu">
+                            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="#">Dashboard</a>
+                                    </li>
+                                    <li><a href="bord.html">Dashboard2</a>
+                                    </li>
+                                    <li><a href="index3.html">Dashboard3</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li><a><i class="fa fa-edit"></i> Contenus <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="/contents">Domaine</a>
+                                    </li>
+                                    <li><a href="/items">Specialites</a>
+                                    </li>
+                                    <li class="active" ><a href="form_validation.html">Evaluations</a>
+                                    </li>
+                                    <li><a href="form_wizards.html">Devis</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a><i class="fa fa-desktop"></i> Utilisateurs <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="/users">Gerer</a>
+                                    </li>
+                                    <li><a href="media_gallery.html">Media Gallery</a>
+                                    </li>
+                                    <li><a href="typography.html">Typography</a>
+                                    </li>
+                                    <li><a href="icons.html">Icons</a>
+                                    </li>
+                                    <li><a href="glyphicons.html">Glyphicons</a>
+                                    </li>
+                                    <li><a href="widgets.html">Widgets</a>
+                                    </li>
+                                    <li><a href="invoice.html">Invoice</a>
+                                    </li>
+                                    <li><a href="inbox.html">Inbox</a>
+                                    </li>
+                                    <li><a href="calender.html">Calender</a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <li><a><i class="fa fa-table"></i> Page Pro <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="tables.html">Tables</a>
+                                    </li>
+                                    <li><a href="tables_dynamic.html">Table Dynamic</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a><i class="fa fa-bar-chart-o"></i> Projet <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="chartjs.html">Chart JS</a>
+                                    </li>
+                                    <li><a href="chartjs2.html">Chart JS2</a>
+                                    </li>
+                                    <li><a href="morisjs.html">Moris JS</a>
+                                    </li>
+                                    <li><a href="echarts.html">ECharts </a>
+                                    </li>
+                                    <li><a href="other_charts.html">Other Charts </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="menu_section">
+                        <h3>Live On</h3>
+                        <ul class="nav side-menu">
+                            <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="e_commerce.html">E-commerce</a>
+                                    </li>
+                                    <li><a href="projects.html">Projects</a>
+                                    </li>
+                                    <li><a href="project_detail.html">Project Detail</a>
+                                    </li>
+                                    <li><a href="contacts.html">Contacts</a>
+                                    </li>
+                                    <li><a href="profile.html">Profile</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                                <ul class="nav child_menu" style="display: none">
+                                    <li><a href="page_404.html">404 Error</a>
+                                    </li>
+                                    <li><a href="page_500.html">500 Error</a>
+                                    </li>
+                                    <li><a href="plain_page.html">Plain Page</a>
+                                    </li>
+                                    <li><a href="login.html">Login Page</a>
+                                    </li>
+                                    <li><a href="pricing_tables.html">Pricing Tables</a>
+                                    </li>
+
+                                </ul>
+                            </li>
+                            <li><a><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+                <!-- /sidebar menu -->
+
+                <!-- /menu footer buttons -->
+                <div class="sidebar-footer hidden-small">
+                    <a data-toggle="tooltip" data-placement="top" title="Settings">
+                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                    </a>
+                    <a data-toggle="tooltip" data-placement="top" title="FullScreen">
+                        <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+                    </a>
+                    <a data-toggle="tooltip" data-placement="top" title="Lock">
+                        <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+                    </a>
+                    <a data-toggle="tooltip" data-placement="top" title="Logout">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+                    </a>
+                </div>
+                <!-- /menu footer buttons -->
+            </div>
+        </div>
+        <!-- top navigation -->
+        <div class="top_nav">
+
+            <div class="nav_menu">
+                <nav class="" role="navigation">
+                    <div class="nav toggle">
+                        <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="">
+                            <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <img src="images/img.jpg" alt=""> UserName
+                                <span class=" fa fa-angle-down"></span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
+                                <li>
+                                    <a href="/profil">  Profile</a>
+                                </li>
+                                <li>
+                                    <a href="/profil">
+                                        <span class="badge bg-red pull-right">50%</span>
+                                        <span>Settings</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;">Help</a>
+                                </li>
+                                <li><a href="/logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li role="presentation" class="dropdown">
+                            <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
+                                <i class="fa fa-envelope-o"></i>
+                                <span class="badge bg-green">6</span>
+                            </a>
+                            <ul id="menu1" class="dropdown-menu list-unstyled msg_list animated fadeInDown" role="menu">
+                                <li>
+                                    <a>
+                      <span class="image">
+                                        <img  src="ressources/images/img.jpg" alt="Profile Image" />
+                                    </span>
+                      <span>
+                                        <span>John Smith</span>
+                      <span class="time">3 mins ago</span>
+                      </span>
+                      <span class="message">
+                                        Film festivals used to be do-or-die moments for movie makers. They were where...
+                                    </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a>
+                      <span class="image">
+                                        <img src="images/img.jpg" alt="Profile Image" />
+                                    </span>
+                      <span>
+                                        <span>John Smith</span>
+                      <span class="time">3 mins ago</span>
+                      </span>
+                      <span class="message">
+                                        Film festivals used to be do-or-die moments for movie makers. They were where...
+                                    </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <div class="text-center">
+                                        <a>
+                                            <strong>See All Alerts</strong>
+                                            <i class="fa fa-angle-right"></i>
+                                        </a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>
+                </nav>
+            </div>
+
+        </div>
+        <!-- /top navigation -->
         <!-- page content -->
         <div class="right_col" role="main">
             <h1>--APP--</h1>
-            <a href="#/">Home</a> {{x}} -- <span ng-bind="x"></span>
+            <a href="/">Home</a> {{x}} -- <span ng-bind="x"></span>
 
-            <p>
-                <strong>user</strong> : <%= user%> <br/>
-                <strong>id</strong> : <%= user._id%> <br/>
-                <strong>email</strong> : <%= user.username%> <br/>
-                <strong>password</strong> : <%= user.password%> <br/>
-            </p>
             <nav>
-                <a href="login.html"> Login </a><a href="#/users"> Users </a> <a href="#/contents"> Contenus </a> || <a href="#/items"> Items </a>
+                <a href="login.html"> Login </a><a href="/users"> Users </a> <a href="/contents"> Contenus </a> || <a href="/items"> Items </a>
             </nav>
 
             <div class="">
@@ -95,7 +327,7 @@
                     <div ng-view>
 
                     </div>
-                    <% if(user.typeUser == 'admin'){%>
+
                     <div ng-controller="homeCtrl">
                         <div class="col-md-12 col-xs-12">
                             <div class="x_panel">
@@ -391,10 +623,18 @@
                             </div>
                         </div>
                     </div>
-                    <%}%>
                 </div>
             </div>
-            <% include footer %>
+
+            <!-- footer content -->
+            <footer>
+                <div class="copyright-info">
+                    <p class="pull-right">Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                    </p>
+                </div>
+                <div class="clearfix"></div>
+            </footer>
+            <!-- /footer content -->
 
         </div>
         <!-- /page content -->
