--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
     <!-- Vendors -->
     <script type="text/javascript" src="src/vendors/angular/angular.js"></script>
     <script type="text/javascript" src="src/vendors/angular-route/angular-route.js"></script>
-
+    <script type="text/javascript" src="libs/angular-socket-io/socket.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="routing.js"></script>
 
