demande devis frontend

--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,12 @@
     <script type="text/javascript" src="src/services/contentProvider.js"></script>
     <script type="text/javascript" src="src/services/homeProvider.js"></script>
     <script type="text/javascript" src="src/services/socketDevisFactory.js"></script>
+    <script type="text/javascript" src="src/services/devisProvider.js"></script>
     <!-- Repositorys-->
     <script type="text/javascript" src="src/repositorys/contentRepository.js"></script>
     <script type="text/javascript" src="src/repositorys/homeRepository.js"></script>
-
+    <script type="text/javascript" src="src/repositorys/devisRepository.js"></script>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io.connect('http://localhost:8080');
@@ -272,18 +274,18 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a>
+                        <a>
                       <span class="image">
-                                        <img src="images/img.jpg" alt="Profile Image" />
-                                    </span>
+                        <img src="images/img.jpg" alt="Profile Image" />
+                      </span>
                       <span>
-                                        <span>John Smith</span>
+                        <span>John Smith</span>
                       <span class="time">3 mins ago</span>
                       </span>
                       <span class="message">
-                                        Film festivals used to be do-or-die moments for movie makers. They were where...
-                                    </span>
-                                    </a>
+                        Film festivals used to be do-or-die moments for movie makers. They were where...
+                       </span>
+                        </a>
                                 </li>
                                 <li>
                                     <div class="text-center">
